# azure-remote-rendering-asset-tool

./: .clang-format  .gitignore  BuildWithNinja.bat  CMakeLists.txt  CODEOWNERS  FormatSourceCode.bat  GenerateSolution.bat  GenerateSolution.ps1  NOTICE.txt  README.md  RunClangTidy.bat  cgmanifest.json  main.cpp  packages.config
.github/ISSUE_TEMPLATE/: 1-arrt-problem.md  1-remote-rendering-problem.md  2-asset-conversion-problem.md  2-general-questions.md  config.yml
.pipelines/: CheckFormatCompliant.ps1  build.cmd  build.yml  checkout_arrt_dependencies.cmd  checkout_arrt_dependencies.ps1  pipeline.user.windows.yml  test.cmd  testchecklist.md
Arrt/: main.cpp  version.h
Arrt/Resources/: ArrtApplication.qrc
Arrt/View/: AboutView.cpp  AboutView.h  ApplicationView.cpp  ApplicationView.h  ArrtAccessibility.cpp  ArrtAccessibility.h  ArrtStyle.cpp  ArrtStyle.h  NewVersionView.cpp  NewVersionView.h  NotificationButtonView.cpp  NotificationButtonView.h
Arrt/ViewUtils/: BaseLayout.cpp  DpiUtils.cpp  Formatter.h  SimpleVerticalLayout.cpp  SimpleVerticalLayout.h
Arrt/Widgets/: ColorPicker.cpp  ColorPicker.h  CustomComboBox.cpp  CustomComboBoxDelegate.cpp  CustomSplitter.cpp  CustomSplitter.h  FileDialogMultiSelection.cpp  FlatButton.cpp  FlatButton.h  FlowLayout.cpp  FlowLayout.h  FocusableContainer.cpp  FocusableContainer.h  FormControl.cpp  FormControl.h  FormatDoubleSpinBox.cpp  FormatDoubleSpinBox.h  HoursMinutesControl.cpp  LineEditReturnOnFocusLost.cpp  LineEditReturnOnFocusLost.h  MainToolbarButton.cpp  MainToolbarButton.h  Navigator.h  ReadOnlyText.cpp  ReadOnlyText.h  SimpleMessageBox.cpp  SimpleMessageBox.h  TimeValidator.h  Toolbar.cpp  Toolbar.h  ToolbarButton.cpp  ToolbarButton.h  VerticalScrollArea.cpp
ArrtModel/Model/: ArrAsync.h  ArrFrontend.cpp  ArrFrontend.h  ArrServiceStats.cpp  ArrServiceStats.h  ArrSessionManager.cpp  ArrSessionManager.h  AzureStorageManager.cpp  AzureStorageManager.h  Configuration.cpp  Configuration.h  ConversionManager.cpp  ConversionManager.h  IncludesAzureRemoteRendering.cpp  IncludesAzureRemoteRendering.h  IncludesAzureStorage.h
ArrtModel/Utils/: Accumulators.h  BoolWithReason.h  ExtensionFilter.cpp  FixedCircularBuffer.h  FontOverrideModel.cpp  FontOverrideModel.h  JsonUtils.h  ScopedBlockers.cpp  StyleUtils.cpp  StyleUtils.h  TimeValidator.cpp
ArrtModel/ViewModel/: AboutModel.cpp  AboutModel.h  ApplicationModel.cpp  ApplicationModel.h  NewVersionModel.cpp  NewVersionModel.h  NotificationButtonModel.h  NotificationButtonModelImplementation.cpp
ArrtSource/: ArrtMain.cpp  ArrtVersion.h
ArrtSource/App/: AppWindow.cpp  AppWindow.h  AppWindow.ui  LogWidget.h  LogWidget.ui  SettingsDlg.cpp  SettingsDlg.h  SettingsDlg.ui
ArrtSource/Conversion/: Conversion.cpp  Conversion.h  ConversionManager.cpp  ConversionManager.h
ArrtSource/Rendering/: ArrAccount.cpp  ArrAccount.h  ArrConnectionLogic.cpp  ArrConnectionLogic.h  ArrSession.cpp  ArrSession.h  ArrSettings.cpp  ArrSettings.h  IncludeAzureRemoteRendering.cpp  IncludeAzureRemoteRendering.h
ArrtSource/Resources/: Arrt.rc  ArrtApplication.qrc
ArrtSource/Storage/: FileUploader.cpp  FileUploader.h  IncludeAzureStorage.h  StorageAccount.cpp  StorageAccount.h
ArrtSource/Utils/: CheckRequirements.cpp  ColorPickerButton.cpp  ColorPickerButton.h  ConnectionStatus.h  LogHelpers.cpp  LogHelpers.h  Loggin.cpp  Logging.cpp  Logging.h  TimeValidator.cpp  TimeValidator.h
Documentation/: conversion.md  index.md  log-panel.md  rendering.md  settings-panel.md  troubleshoot.md  upload.md
Model/: ArrFrontend.cpp  ArrFrontend.h  ArrSessionManager.cpp  ArrSessionManager.h  AzureStorageManager.cpp  ConversionManager.cpp  ConversionManager.h  IncludesAzureRemoteRendering.cpp  IncludesAzureRemoteRendering.h  IncludesAzureStorage.h
Model/Log/: LogHelpers.cpp  LogHelpers.h
Model/ModelEditor/: EntitySelection.cpp  EntitySelection.h  MaterialPBR.cpp  MaterialPBR.h  MaterialProvider.cpp  MaterialProvider.h
Model/Settings/: ArrAccountSettings.cpp  ArrAccountSettings.h  AzureStorageAccountSettings.cpp  AzureStorageAccountSettings.h  CameraSettings.h  VideoSettings.h
Model/StorageUtils/: BlobFetcher.cpp  ContainerFetcher.h  SegmentedAsyncFetcher.cpp
Resources/: Arrt.rc
Tests/: ArrtTests.cpp
Tests/Model/: ArrtTests.cpp
Tests/Standalone/: Standalone.cpp
Utils/: BaseLayout.h  DpiUtils.cpp  DpiUtils.h  ExtensionFilter.h  ScopedBlockers.h  SimpleVerticalLayout.h  StringEncrypter.cpp  StringEncrypter.h  Value.h
View/: ApplicationView.cpp  ArrtAccessibility.cpp  ArrtStyle.cpp
View/BlobExplorer/: BlobListView.h
View/Conversion/: ConversionPageView.cpp  ConversionPageView.h  ConversionView.cpp  InputSelectionView.h  OutputSelectionView.cpp  OutputSelectionView.h
View/ModelEditor/: MaterialEditorView.cpp  MaterialEditorView.h  MaterialsList.cpp  ScenePanelView.cpp
View/Parameters/: BoundCheckBox.cpp  BoundCheckBox.h  BoundColor.cpp  BoundColor.h  BoundComboBox.h  BoundFloatSlider.cpp  BoundFloatSlider.h  BoundFloatSpinBox.cpp  BoundFloatSpinBox.h  BoundFloatVector.h  BoundMultiComboBox.cpp  BoundText.cpp  BoundWidget.h  BoundWidgetFactory.h
View/Render/: RenderPageView.h
View/Session/: RunningSessionView.cpp  SessionInfoView.cpp
View/Settings/: ArrAccountSettingsView.h  CameraSettingsView.cpp  SettingsBaseView.cpp  SettingsView.cpp  StorageAccountSettingsView.cpp  StorageAccountSettingsView.h  VideoSettingsView.cpp
View/Upload/: UploadView.h
ViewModel/: ApplicationModel.h  NotificationButtonModelImplementation.h
ViewModel/BlobExplorer/: BlobContainerSelectorModel.cpp  BlobExplorerModel.h  BlobsListModel.h
ViewModel/Conversion/: ConversionConfigModel.h  ConversionModel.cpp  (+5 more)
Widgets/: CheckComboBox.cpp  CheckComboBox.h  CheckComboBoxDelegate.cpp  CheckComboBoxDelegate.h  ColorPicker.cpp  ColorPicker.h  CustomComboBox.h  CustomComboBoxDelegate.h  FileDialogMultiSelection.h  FlatButton.cpp  FormatDoubleSpinBox.h  HoursMinutesControl.cpp  HoursMinutesControl.h  Navigator.cpp  TimeValidator.cpp  VerticalScrollArea.h
pipelines/: CheckFormatCompliant.ps1  build.yml
(+245 files in other folders)
